# python-aioretry

./: .gitignore  .ruff.toml  .travis.yml  Makefile  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python.yml
aioretry/: __init__.py  retry.py
docs/: README.md  conf.py
test/: test_aioretry.py
