[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioretry"
authors = [{name = "Kael Zhang", email = "i+pypi@kael.me"}]
description = "Asyncio retry utility for Python 3.7+"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["aioretry"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ['version']
dependencies = []

[project.urls]
"Homepage" = "https://github.com/kaelzhang/python-aioretry"

[project.optional-dependencies]
test = [
    "codecov==2.1.13",
    "coverage==7.3.2",
    "flake8==6.1.0",
    "Flake8-pyproject==1.2.3",
    "autopep8==2.0.4",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "setuptools==69.0.0",
    "twine==4.0.2",
]

[tools.flake8]
ignore = "E501"
per_file_ignores = [
    "**/__init__.py: F401"
]