[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioretry"
authors = [
    {name = "Kael Zhang", email = "i+pypi@kael.me"}
]
description = "Asyncio retry utility for Python 3.7+"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["aioretry"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dynamic = ['version']
dependencies = []

[project.urls]
Homepage = "https://github.com/kaelzhang/python-aioretry"

[project.optional-dependencies]
dev = [
    "codecov",
    "coverage",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "twine",
    "mypy",
    "build"
]

[tool.setuptools]
packages = ["aioretry"]

[tool.setuptools.dynamic]
version = {attr = "aioretry.__version__"}

[tool.setuptools.package-data]
aioretry = ["py.typed"]

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
